--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "mongoose": "^5.9.24",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "NODE_ENV=production node service/app.js",
     "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "precommit": "lint-staged",
     "server": "nodemon service/app.js",
     "heroku-prebuild": "npm install",
     "heroku-postbuild": "npm run build",
